--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -1,3 +1,6 @@
+/* 
+Change the font style and font size of the body 
+*/
 body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
