--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -5,3 +5,6 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
 }
+header, footer {
+    background-color: lightcoral;
+}
