--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -8,8 +8,8 @@ body{
 main header, footer {
     background-color: lightcoral;
 }
-h3 p ul{
-    list-style: square;
+.highlight{
+    background-color:lightpink;
 
 nav ul{
     list-style: none ;
