--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -9,10 +9,37 @@ body{
 main header, footer {
     background-color: lightcoral;
 }
-
-/* Styling the navigation */
+/* Change color of class tittle */ 
+.site-tittle{
+    color:firebrick;
+}
+/* Change box for my image*/
+#my-image{
+    box-shadow: 0px 0px 2px 1px black;
+}
+/* Replace bullets for hobbies */
+#hobbies-list{
+    list-style:square;
+}
+/* Add background */
+#hobbies-list li:nth-child(odd){
+    background-color: gray;
+}
+/* Styling navigation */
 nav ul{
-    list-style: none ;
-    background-color:tan; 
-    text-decoration: none;
+    list-style: none;
+}
+nav ul a{
+    text-decoration:none;
+    background-color:palegoldenrod;
+}
+nav ul a,
+nav ul a:link,
+nav ul a:visited{
+    border: 2px solid coral ;
+}
+nav ul .current,
+nav ul a:hover,
+nav ul a:focus {
+    background-color: lightcoral;
 }
