--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -43,3 +43,7 @@ nav ul a:hover,
 nav ul a:focus {
     background-color: lightcoral;
 }
+/* Change the size of the portrait */
+article img{
+    width:100%
+}
