--- a/week-7/week-5/css/main.css
+++ b/week-7/week-5/css/main.css
@@ -2,6 +2,18 @@ body{
     font-family:Arial, Helvetica, sans-serif;
     color:darkslategray;
 }
+body{
+    /* Adding background image */
+    background-image:url(../images/DSCF6028\ 15.25.19.jpg);
+}
+.container{
+    max-width: 1200px;
+    /* Top-bottom-left-right */
+    margin:0 auto;
+}
+img{
+    width:100%;
+}
 
 /*This is a CSS comment */
 h1{
