--- a/week-7/week-5/css/main.css
+++ b/week-7/week-5/css/main.css
@@ -4,7 +4,7 @@ body{
 }
 body{
     /* Adding background image */
-    background-image:url(../images/97cea7e15201dc807d266908c4d911b1.jpg);
+    background-image:url(../images/white_brick_wall\ \(1\).png);
 }
 .container{
     max-width: 1200px;
@@ -82,4 +82,31 @@ aside{
 }
 section{
     clear:both;
+}
+
+/* Selecting element with id value */
+#treatofweek{
+    /* color image repeat position-x position-y; */
+    background:chocolate url(../images/bread\ \(1\).jpeg) no-repeat center centerl;
+    background-size:cover;
+
+    color:white;
+
+    font: size 1.25em;
+    /* 1.25x16=20px */
+    padding:1em 1em 4em 1em;
+    /* 1x20=20px */
+
+    /* viewport based unit */
+    /* height:100vh; */
+
+    width:50%
+}
+
+/* position-absolute*/
+/* 0020 */
+.orange-link.large-text{
+    position:absolute;
+    bottom:0;
+    right:0;
 }
