--- a/midterm-assignment/css/main.css
+++ b/midterm-assignment/css/main.css
@@ -1,4 +1,5 @@
 /* Change the font and size of the tittle */
 body{
     font-family: Arial, Helvetica, sans-serif;
+    background-color:#9BC5DE;
 }
