--- a/midterm-assignment/css/main.css
+++ b/midterm-assignment/css/main.css
@@ -51,5 +51,29 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color:#A3D2DE ;   
 }
+h1{
+	color:blanchedalmond;
+	font-size: 50px;
+}
+/* Style navigations */
+nav ul{
+	list-style:none;
+}
+nav ul a{
+	color:#000;
+}
+h1{
+	text-align:center;
+}
+header img{
+	width: 100%;
+}
+article h2{
+font-size: 20px;
+font-weight: bold;
+}
 
-    
+form h2{
+font: size 20px;
+font-weight:bold;
+}
