--- a/midterm-assignment/css/main.css
+++ b/midterm-assignment/css/main.css
@@ -49,7 +49,9 @@ table {
 /* Change the font and size of the tittle */
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color:#A3D2DE ;   
+    background-color:#A3D2DE ;  
+	margin: 10%;
+	line-height: 2rem;
 }
 h1{
 	color:blanchedalmond;
@@ -58,6 +60,7 @@ h1{
 /* Style navigations */
 nav ul{
 	list-style:none;
+	
 }
 nav ul a{
 	color:#000;
@@ -69,7 +72,7 @@ header img{
 	width: 100%;
 }
 article h2{
-font-size: 20px;
+font-size: 30px;
 font-weight: bold;
 }
 
