--- a/midterm-assignment/css/main.css
+++ b/midterm-assignment/css/main.css
@@ -60,10 +60,10 @@ h1{
 /* Style navigations */
 nav ul{
 	list-style:none;
-	text-decoration:none;
 }
 nav ul a{
 	color:#000;
+	text-decoration:none;
 }
 h1{
 	text-align:center;
@@ -79,4 +79,8 @@ font-weight: bold;
 form h2{
 font: size 20px;
 font-weight:bold;
+}
+/* Change size of the ul in article */
+article h3{
+	font-size:1.5em;
 }
