--- a/midterm-assignment/css/main.css
+++ b/midterm-assignment/css/main.css
@@ -77,10 +77,21 @@ font-weight: bold;
 }
 
 form h2{
-font: size 20px;
-font-weight:bold;
+font-size: 1.5em;
 }
 /* Change size of the ul in article */
 article h3{
 	font-size:1.5em;
 }
+article ul{
+	list-style: circle;
+}
+/* Set width and border for the form */
+/* Background-image */
+#banner{
+	background:url(../images/lone-starfish-wide.jpg); no-repeat center center;
+	padding:10%;
+	text-align:center;
+	background-size:cover;
+}
+/* Adding border for the form */
