--- a/midterm-assignment/css/main.css
+++ b/midterm-assignment/css/main.css
@@ -95,3 +95,9 @@ article ul{
 	background-size:cover;
 }
 /* Adding box model*/
+form{
+	width:fit-content;
+	height:fit-content;
+	padding:20px;
+	margin: 20px;
+}
