--- a/week-9/css/main.css
+++ b/week-9/css/main.css
@@ -78,7 +78,7 @@ img{
 /* love Hate */
 a,
 a:link,
-a:visted{
+a:visited{
     color:inherit;
 }
 a:hover,
@@ -114,7 +114,7 @@ p{
 
 .container{
     max-width:1200px;
-    margin 0 auto;
+    margin:0 auto;
     padding: 1em;
 }
 
@@ -159,7 +159,7 @@ p{
 .site-footer{
     margin-top:20px;
     padding:20px 0;
-    border-top:2px steelblue;
+    border-top:2px solid steelblue;
 }
 
 .copy{
@@ -167,9 +167,9 @@ p{
 }
 
 /* Desktop Styles */
-@media screen and(min-width:600px){
+@media screen and (min-width: 600px){ 
     html{
-        font-sỉz:16px;
+        font-size:16px;
     }
 
     .mobile-logo{
@@ -177,7 +177,7 @@ p{
     }
     .desktop-logo{
         display:inline-block;
-        max-width:300px;
+        max-width: 300px;
     }
     .banner{
         background-image:url("../images/desktop-banner.jpg");
@@ -193,6 +193,7 @@ p{
         margin-right:1em;
     }
 
-    .app.btn{
+    .app .btn{
         float:right;
     }
+}
