--- a/week-10/css/main.css
+++ b/week-10/css/main.css
@@ -139,7 +139,26 @@ p{
     text-align:center;
     text-transform:uppercase;
 }
+/* Navigation */
+.nav-list li{
+    border-bottom: 1px solid grey;
+    text-align:center;
+}
 
+/* Love Hate */
+.nav-list a,
+.nav-list a:link,
+.nav-list a:visited {
+    display:block;
+    padding: 1em 0;
+    text-decoration:none;
+}
+.nav-list a:hover,
+.nav-list a:focus,
+.nav-list a.current{
+    background-color:#00ADD8;
+    color:inherit;
+}
 /* Mobile App Section */
 .btn{
     text-decoration: none;
@@ -153,6 +172,18 @@ p{
 .bth:focus{
     background-color:deepskyblue;
     color:inherit;
+}
+/* App Section */
+.actions-list{
+    display:flex;
+    flex-flow: row wrap;
+}
+
+.actions-list{
+    nav-width:50%;
+    padding: 1em;
+    text-align: center;
+    font-size: 1.5rem;
 }
 
 /* Footer */
@@ -185,6 +216,18 @@ p{
     .banner h1{
         color:white;
     }
+    /* Navigation */
+    .nav-list{
+        display:flex;
+    }
+    .nav-list li{
+        flex:1;
+        border:none;
+        border-right:1px solid grey;
+    }
+    .nav-list li:last-child{
+        border:none;
+    }
 
     /* App Section */
     .app img{
@@ -195,4 +238,13 @@ p{
 
     .app .btn{
         float:right;
+}
+}
+/* ---------------------------------
+            Media Query 800px
+-----------------------------------*/
+@media screen and (min-width:800px){
+    .actions-list li{
+        max-width:20%;
+    }
 }
