--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -65,7 +65,6 @@ body{
     display:table;
     clear:both;
 }
-
 /* Define font */
 body{
 font-family: 'Open Sans', sans-serif;
@@ -106,4 +105,35 @@ ul a:focus{
 	background-color:#c78c06;
 	color:#222;
 }
+
+/* Styling banner */
+.banner{
+	background-image: url("../images/main-banner.jpg");
+	background-size:cover;
+	background-repeat: no-repeat;
+}
+h1{
+	font-size: 3em;
+	font-weight: 1000;
+	color:white;
+	padding-left: 20px;
+}
+.banner p{
+	color: white;
+	font-size: 12px;
+	padding: 20px;
+	padding-bottom: 40px;
+}
+/* Styling connect us box */
+.banner a{
+	background-color:#c78c06;
+	color:#222;
+	text-decoration: none;
+	font-size:smaller;
+	text-align: center;
+	padding: 20px;
+	padding-bottom: 40px;
+}
+
+/* Styling about us */
 
