--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -134,6 +134,58 @@ h1{
 	padding: 20px;
 	padding-bottom: 40px;
 }
-
 /* Styling about us */
+.aboutcontent{
+	background-color:#ffe6ac;
+	padding: 20px;
+}
+.aboutcontent h2{
+	font-size: 25px;
+	font-weight:bolder; 
+	color:#222;
+	padding-bottom:15px;
+}
+.aboutcontent p{
+	font-size: 12px;
+	color:#222;
+	padding-bottom:10px
+}
+/* Style of the img */
 
+/* Styling Our Services */
+.servicecontent h2{
+	font-size: 25px;
+	font-weight:bolder; 
+	color:#222;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	padding-left: 20px;
+}
+.digital{
+	font-size: 12px;
+	color:#222;
+	margin-bottom: 10px;
+	margin-left:10px;
+	padding-top: 15px;
+	background-color:#ffe6ac;
+}
+.digital h3{
+	font-size: 20px;
+	font-weight:bolder; 
+	color:#222;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	padding-left: 10px;
+}
+.digital p{
+	font-size: 12px;
+	padding-left: 10px;
+	margin-top: 15px;
+}
+.digital a{
+	background-color: #222;
+	text-decoration: none;
+	color: white;
+	padding-left:10px;
+	padding: 20px;
+}
