--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -337,7 +337,7 @@ h1{
 	opacity: 0.8;
 	text-decoration: none;
 	color: white;
-	padding-left:10px;
+	padding-left:20px;
 	padding: 20px;
 	border:1px solid #c78c06;
 }
@@ -417,7 +417,58 @@ h1{
 	padding-left:20px;
 }
 .message h3{
-	font-size: 15px;
-	font-weight: bolder;
+	font-size: 25px;
+	font-weight:bold;
 	padding-left: 20px;
+	padding-top: 20px;
+	padding-bottom: 10px;
+}
+.message form{
+	padding-left: 20px;
+}
+.message button{
+	color:#c78c06;
+	background-color: #222;
+	border:1px solid #c78c06;
+	margin-top: 15px;
+}
+/* Styling Hours Operation */
+.hours h3{
+	font-size: 25px;
+	font-weight:bold;
+	padding-left: 20px;
+	padding-top: 20px;
+	padding-bottom: 10px;
+}
+.hours table{
+	border: 1px solid #222;
+	margin-left: 20px;
+}
+
+/* Styling location */
+.location h3{
+	font-size: 25px;
+	font-weight:bold;
+	padding-left: 20px;
+	padding-top: 20px;
+	padding-bottom: 10px;	
+}
+.location iframe{
+	margin-left: 20px;
+}
+/* Styling Footer */
+.footer-content{
+	background-color:#222;
+	color:#c78c06;
+	margin-top: 20px;
+}
+.footer-content li:nth-child(1){
+	background-color:#222;
+	color:#c78c06;
+	margin-top: 20px;
+}
+.footer-content a{
+	background-color:#222;
+	color:#c78c06;
+	margin-top: 20px;
 }
