--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -86,6 +86,7 @@ font-family: 'Open Sans', sans-serif;
 .searchbar{
 	width: 80%;
 	height: 2.5em;
+	margin-left: 20px;
 }
 .ul button{
 	background-color:#222;
@@ -93,7 +94,6 @@ font-family: 'Open Sans', sans-serif;
 	height: 2.5em;
 	text-align: center;
 	border: 1px solid #c78c06;
-	margin-left: 0;
 }
 #logo{
 	display:block;
@@ -115,6 +115,9 @@ ul a:focus{
 	background-image: url("../images/main-banner.jpg");
 	padding-top: 40px;
 	padding-bottom: 40px;
+	background-size:cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 .banner{
 	background-size:cover;
@@ -145,6 +148,7 @@ h1{
 	padding: 20px;
 	margin-left: 20px;
 }
+
 /* Styling about us */
 .aboutcontent{
 	background-color:#ffe6ac;
@@ -212,6 +216,7 @@ h1{
 	margin-left:10px;
 	background-color:#ffe6ac;
 	background-size: cover;
+	padding-bottom: 40px;
 }
 .marketing h3{
 	font-size: 20px;
@@ -225,11 +230,14 @@ h1{
 	font-size: 12px;
 	padding-left: 10px;
 	margin-top: 15px;
+	padding-bottom: 20px;
 }
 .marketing a{
 	background-color: #222;
 	text-decoration: none;
 	color: white;
+	margin-left:10px;
+	margin-top: 20px;
 	padding-left:10px;
 	padding: 20px;
 }
@@ -242,24 +250,28 @@ h1{
 	margin-left:10px;
 	background-color:#ffe6ac;
 	background-size: cover;
+	padding-bottom: 40px;
 }
 .video h3{
 	font-size: 20px;
 	font-weight:bolder; 
 	color:#222;
-	padding-bottom: 15px;
+	padding-bottom: 10px;
 	padding-top: 15px;
 	padding-left: 10px;
 }
 .video p{
 	font-size: 12px;
 	padding-left: 10px;
-	margin-top: 15px;
+	margin-top: 10px;
+	padding-bottom: 20px;
 }
 .video a{
 	background-color: #222;
 	text-decoration: none;
 	color: white;
+	margin-left:10px;
+	margin-top: 20px;
 	padding-left:10px;
 	padding: 20px;
 }
@@ -272,24 +284,28 @@ h1{
 	margin-left:10px;
 	background-color:#ffe6ac;
 	background-size: cover;
+	padding-bottom: 40px;
 }
 .web h3{
 	font-size: 20px;
 	font-weight:bolder; 
 	color:#222;
-	padding-bottom: 15px;
+	padding-bottom: 10px;
 	padding-top: 15px;
 	padding-left: 10px;
 }
 .web p{
 	font-size: 12px;
 	padding-left: 10px;
-	margin-top: 15px;
+	margin-top: 10px;
+	padding-bottom: 20px;
 }
 .web a{
 	background-color: #222;
 	text-decoration: none;
 	color: white;
+	margin-left:10px;
+	margin-top: 20px;
 	padding-left:10px;
 	padding: 20px;
 }
@@ -302,24 +318,28 @@ h1{
 	margin-left:10px;
 	background-color:#ffe6ac;
 	background-size: cover;
+	padding-bottom: 40px;
 }
 .print h3{
 	font-size: 20px;
 	font-weight:bolder; 
 	color:#222;
-	padding-bottom: 15px;
+	padding-bottom: 10px;
 	padding-top: 15px;
 	padding-left: 10px;
 }
 .print p{
 	font-size: 12px;
 	padding-left: 10px;
-	margin-top: 15px;
+	margin-top: 10px;
+	padding-bottom: 20px;
 }
 .print a{
 	background-color: #222;
 	text-decoration: none;
 	color: white;
+	margin-left:10px;
+	margin-top: 20px;
 	padding-left:10px;
 	padding: 20px;
 }
@@ -329,8 +349,11 @@ h1{
 	background-image: url("../images/vision.jpg");
 	background-size:cover;
 	margin-bottom: 10px;
+	padding-bottom: 40px;
 	background-color:#ffe6ac;
 	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 .visioncontent h2{
 	color: white;
@@ -343,7 +366,7 @@ h1{
 .visioncontent p{
 	color: whitesmoke;
 	font-size: 12px;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 	margin-left: 10px;
 }
 .visioncontent a {
@@ -351,7 +374,9 @@ h1{
 	opacity: 0.8;
 	text-decoration: none;
 	color: white;
-	padding-left:20px;
+	margin-left:10px;
+	margin-top: 20px;
+	padding-left:10px;
 	padding: 20px;
 	border:1px solid #c78c06;
 }
@@ -379,11 +404,13 @@ h1{
 	font-weight: bolder;
 	padding-left: 20px;
 	padding-bottom: 10px;
+	border-bottom: 2px solid #c78c06;
 }
  .team1 p{
 	color:#222;
 	font-size: 12px;
 	padding-bottom: 20px;
+	padding-top:5px;
 	margin-left: 17px;
 }
 .team1{
@@ -408,12 +435,14 @@ h1{
 	font-weight: bolder;
 	padding-left: 20px;
 	padding-bottom: 10px;
+	border-bottom: 2px solid #c78c06;
 }
  .team2 p{
 	color:#222;
 	font-size: 12px;
 	padding-bottom: 20px;
 	margin-left: 17px;
+	padding-top:5px;
 }
 .team2{
 	font-size: 12px;
@@ -447,7 +476,8 @@ h1{
 	margin-top: 15px;
 	font-size:medium;
 }
-input,textarea{
+.message input,
+.message textarea{
 	display: block;
 	width: 95%;
 }
@@ -472,6 +502,11 @@ table  th{
 	background-color: #ffe6ac;
 	font-size: small;
 	padding: 15px;
+}
+table td{
+	align-items: center;
+	font-size:x-small;
+	padding: 10px;
 }
 
 /* Styling location */
