--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -545,23 +545,25 @@ table td{
 -----------------------------------*/
 @media screen and (min-width: 760px){
 /* Styling Navigation */
-.ul{
-	margin: 0 auto;
+ul{
+	display:flex;
+	margin-left: 40px;
+	align-items: center;
+	justify-items: center;
+	flex-direction: row;
 }
-.ul li{
-	display:inline-block;
+ul li{
 	font-size: 15px;
-	margin-left: 70px;
+	margin: 20px;
 	}
 /* Hover */
 ul a:hover,
 ul a:focus{
 	background-color:#c78c06;
-	width: 120px;
+	width: 100px;
 	height: 40px;
 	padding-bottom: 5px;
 	color:#222;
-	text-align: center;
 }
 /* Logo */
 #logo{
@@ -569,12 +571,20 @@ ul a:focus{
 }
 ul li:nth-child(1){
 	background-color: #222;
+	align-self: center;
+}
+ul li:nth-child(1) a:hover,
+ul li:nth-child(1) a:focus{
+	background-color: #222;
 	padding: 20px 0 0 0;
+	align-self: center;
 }
 .searchbar{
-	width: 65%;
+	width: 60%;
 }
-
+ul li:nth-child(7) form{
+	align-self: center;
+}
 /* Styling banner */
 #home{
 	background-image: url("../images/main-banner.jpg") no-repeat;
@@ -604,11 +614,33 @@ ul li:nth-child(1){
 	font-size: 50px;
 	padding-left: 35px;
 }
-
-
-
-
-
+.serviceblock{
+	display: grid;
+	grid-template-columns:repeat(6, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	padding-left: 20px;
+	padding-right: 35px;
+}
+.digital{
+	grid-column: 1/4 ;
+	grid-row: 1/2;
+}
+.marketing{
+	grid-column:4/7;
+	grid-row: 1/2;
+}
+.video{
+	grid-column: 1/3 ;
+	grid-row: 2/3;
+}
+.web{
+	grid-column: 3/5 ;
+	grid-row: 2/3;
+}
+.print{
+	grid-column: 5/7;
+	grid-row: 2/3;
+}
 /* Styling Our Vision */
 .visioncontent h2{
 	font-size: 50px;
@@ -627,7 +659,61 @@ ul li:nth-child(1){
 	font-size: 50px;
 	padding-left: 35px;
 }
+.teamblock img{
+	width: 50%;
+}
+.teamblock{
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	padding-left: 20px;
+	padding-right: 35px;
+}
+.team1{
+	grid-column: 1/2;
+	grid-row: 1/2;
+}
+.team1 img{
+	float: left;
+	padding-right: 10px;
+}
+.team1 h3{
+	font-size: 40px;
+}
+.team2{
+	grid-column: 1/2;
+	grid-row: 2/3;
+}
+.team2 img{
+	float: right;
+	padding-left: 10px;
+}
+.team2 h3{
+	font-size: 40px;
+}
 /* Styling Contact us location and hours */
+.contactcontent h2{
+	font-size: 50px;
+	padding-left: 35px;
+	padding-right: 35px;
+}
+.contactflex{
+	padding-left: 20px;
+}
+.contactflex{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+.message,
+.location{
+	flex-basis: 45%;
+}
+.contactflex .hours{
+	order: 1;
+	width: 100%;
+}
+
 /* Styling footer */
 .footer-content{
 	padding-left: 40px;
