--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -72,6 +72,11 @@ img{
 body{
 font-family: 'Open Sans', sans-serif;
 }
+#services i,
+#vision i{
+	font-size: 1rem;
+	padding-left: 10px;
+}
 
 /* Styling the navigation */
 .ul{
@@ -453,39 +458,38 @@ h1{
 	background-color:#ffe6ac;
 	background-size: cover;
 }
-/* Styling Contact us */
+/* Styling Contact info */
 .contactcontent h2{
 	font-size: 30px;
 	font-weight: bolder;
-	padding-left:20px;
+	margin-left: 15px;
 }
 .message h3{
-	font-size: 25px;
+	font-size: 20px;
 	font-weight:bold;
-	padding-left: 20px;
-	padding-top: 20px;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
+	margin-left: 15px;
 }
 .message form{
-	padding-left: 20px;
-}
-.message button{
-	color:#c78c06;
-	background-color: #222;
-	border:1px solid #c78c06;
-	margin-top: 15px;
-	font-size:medium;
+	margin-left: 15px;
 }
 .message input,
 .message textarea{
 	display: block;
-	width: 95%;
+	width: 100%;
 }
-/* Styling Hours Operation */
+.message button{
+	background-color: #222;
+	color: #c78c06;
+	border: 2px solid #c78c06;
+	font-size: 15px;
+	margin-top: 10px;
+}
+/* Styling hours */
 .hours h3{
 	font-size: 25px;
 	font-weight:bold;
-	padding-left: 20px;
+	padding-left: 15px;
 	padding-top: 20px;
 	padding-bottom: 10px;
 }
@@ -494,8 +498,9 @@ table td{
 	border: 1px solid #222;
 }
 .hours table{
-	margin-left: 20px;
-	width: 90%;
+	margin-left: 15px;
+	width: 100%;
+	margin-right: 15px;
 }
 table  th{
 	align-items: center;
@@ -508,7 +513,6 @@ table td{
 	font-size:x-small;
 	padding: 10px;
 }
-
 /* Styling location */
 .location h3{
 	font-size: 25px;
@@ -519,204 +523,243 @@ table td{
 }
 .location iframe{
 	margin-left: 20px;
+	margin-right: 20px;
+	width: 90%%;
+}
+.contactflex {
+	margin: 0 15px;
 }
 /* Styling Footer */
-.footer-content{
-	background-color:#222;
-	color:#c78c06;
-	margin-top: 20px;
+footer{
+	background-color: #222;
+	color: #c78c06;
+	padding: 15px;
 }
-.footer-content li:nth-child(1){
-	background-color:#222;
-	color:#c78c06;
-	margin-top: 20px;
+footer p{
+	margin: 0 30px;
 }
-.footer-content thead{
-	background-color: #ffe6ac;
+footer p:first-child{
+	margin: 15px 30px;
 }
-.footer-content a{
-	background-color:#222;
-	color:#c78c06;
-	margin-top: 20px;
+footer a{
+	color: #c78c06;
 }
-
 /* ---------------------------------
            Desktop Styles
 -----------------------------------*/
 @media screen and (min-width: 760px){
 /* Styling Navigation */
-ul{
-	display:flex;
-	margin-left: 40px;
-	align-items: center;
-	justify-items: center;
-	flex-direction: row;
-}
-ul li{
-	font-size: 15px;
-	margin: 20px;
+	ul{
+		display:flex;
+		align-items: center;
+		justify-items: center;
+		flex-direction: row;
+		margin: 0 auto;
+		max-width: 1200px;
+		justify-content: center;
 	}
-/* Hover */
-ul a:hover,
-ul a:focus{
-	background-color:#c78c06;
-	width: 100px;
-	height: 40px;
-	padding-bottom: 5px;
-	color:#222;
-}
-/* Logo */
-#logo{
-	width: 70%;
-}
-ul li:nth-child(1){
-	background-color: #222;
-	align-self: center;
-}
-ul li:nth-child(1) a:hover,
-ul li:nth-child(1) a:focus{
-	background-color: #222;
-	padding: 20px 0 0 0;
-	align-self: center;
-}
-.searchbar{
-	width: 60%;
-}
-ul li:nth-child(7) form{
-	align-self: center;
-}
-/* Styling banner */
-#home{
-	background-image: url("../images/main-banner.jpg") no-repeat;
-	padding: 20px 40px 20px 40px;
-	background-size:cover;
-	background-position: center;
-}
-.banner{
-	margin: 10px 0 10px 0;
-}
-/* Styling About us using Flex */
-.aboutcontent{
-	display: flex;
-}
-.aboutcontent img{
-	width: 50%;
-	padding: 10px 20px 10px 20px;
-}
-.aboutcontent h2{
-	font-size: 50px;
-}
-.aboutcontent p{
-	padding-right: 20px;
-}
-/* Styling Our Service using grid*/
-.servicecontent h2{
-	font-size: 50px;
-	padding-left: 35px;
-}
-.serviceblock{
-	display: grid;
-	grid-template-columns:repeat(6, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	padding-left: 20px;
-	padding-right: 35px;
-}
-.digital{
-	grid-column: 1/4 ;
-	grid-row: 1/2;
-}
-.marketing{
-	grid-column:4/7;
-	grid-row: 1/2;
-}
-.video{
-	grid-column: 1/3 ;
-	grid-row: 2/3;
-}
-.web{
-	grid-column: 3/5 ;
-	grid-row: 2/3;
-}
-.print{
-	grid-column: 5/7;
-	grid-row: 2/3;
-}
-/* Styling Our Vision */
-.visioncontent h2{
-	font-size: 50px;
-	padding-left: 35px;
-}
-.visioncontent p{
-	font-size: 15px;
-	padding-left: 35px;
-	padding-right: 35px;
-}
-.visioncontent a{
-	margin-left:40px;
-}
-/* Styling our team using Grid */
-.teamcontent h2{
-	font-size: 50px;
-	padding-left: 35px;
-}
-.teamblock img{
-	width: 50%;
-}
-.teamblock{
-	display: grid;
-	grid-template-columns: repeat(1, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	padding-left: 20px;
-	padding-right: 35px;
-}
-.team1{
-	grid-column: 1/2;
-	grid-row: 1/2;
-}
-.team1 img{
-	float: left;
-	padding-right: 10px;
-}
-.team1 h3{
-	font-size: 40px;
-}
-.team2{
-	grid-column: 1/2;
-	grid-row: 2/3;
-}
-.team2 img{
-	float: right;
-	padding-left: 10px;
-}
-.team2 h3{
-	font-size: 40px;
-}
-/* Styling Contact us location and hours */
-.contactcontent h2{
-	font-size: 50px;
-	padding-left: 35px;
-	padding-right: 35px;
-}
-.contactflex{
-	padding-left: 20px;
-}
-.contactflex{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-.message,
-.location{
-	flex-basis: 45%;
-}
-.contactflex .hours{
-	order: 1;
-	width: 100%;
-}
-
-/* Styling footer */
-.footer-content{
-	padding-left: 40px;
-}
+	ul li{
+		font-size: 1rem;
+		margin: 40px;
+		}
+	/* Hover */
+	ul a:hover,
+	ul a:focus{
+		background-color:#c78c06;
+		width: 100px;
+		height: 40px;
+		color:#222;
+	}
+	/* Logo */
+	#logo{
+		width: 80%;
+	}
+	ul li:nth-child(1){
+		background-color: #222;
+		justify-self: left;
+		margin-left: 0;
+	}
+	ul li:nth-child(7){
+		background-color: #222;
+		justify-self: right;
+		margin-right: 0;
+	}
+	ul li:nth-child(1) a:hover,
+	ul li:nth-child(1) a:focus{
+		background-color: #222;
+		align-self: center;
+	}
+	.searchbar{
+		width: 60%;
+	}
+	ul li:nth-child(7) form{
+		align-self: center;
+	}
+	/* Styling banner */
+	#home{
+		background-image: url("../images/main-banner.jpg") no-repeat;
+		padding: 20px 40px 20px 40px;
+		background-size:cover;
+		background-position: center;
+	}
+	.banner{
+		margin: 0 auto;
+		max-width: 1200px;
+	}
+	/* Styling About us using Flex */
+	.aboutmore{
+		display: flex;
+	}
+	.aboutmore{
+		max-width: 1200px;
+		margin: 0 auto;
+	}
+	.aboutcontent img{
+		width: 50%;
+		padding: 10px 20px 10px 20px;
+	}
+	.aboutcontent h2{
+		font-size: 50px;
+	}
+	.aboutcontent p{
+		padding-right: 20px;
+	}
+	/* Styling Our Service using grid*/
+	.servicecontent h2{
+		font-size: 50px;
+		padding-left: 35px;
+	}
+	.servicecontent{
+		max-width: 1200px;
+		margin: 0 auto;
+	}
+	.serviceblock{
+		display: grid;
+		grid-template-columns:repeat(6, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+		padding-left: 20px;
+		padding-right: 35px;
+	}
+	.digital{
+		grid-column: 1/4 ;
+		grid-row: 1/2;
+	}
+	.marketing{
+		grid-column:4/7;
+		grid-row: 1/2;
+	}
+	.video{
+		grid-column: 1/3 ;
+		grid-row: 2/3;
+	}
+	.web{
+		grid-column: 3/5 ;
+		grid-row: 2/3;
+	}
+	.print{
+		grid-column: 5/7;
+		grid-row: 2/3;
+	}
+	/* Styling Our Vision */
+	.visionmore{
+		max-width: 1200px;
+		margin: 0 auto;
+	}
+	.visioncontent h2{
+		font-size: 50px;
+		padding-left: 35px;
+	}
+	.visioncontent p{
+		font-size: 15px;
+		padding-left: 35px;
+		padding-right: 35px;
+	}
+	.visioncontent a{
+		margin-left:40px;
+	}
+	/* Styling our team using Grid */
+	.teamcontent h2{
+		font-size: 50px;
+		padding-left: 35px;
+	}
+	.teamcontent{
+		margin: 0 auto;
+		max-width: 1200px;
+	}
+	.teamblock img{
+		width: 50%;
+	}
+	.teamblock{
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+		padding-left: 20px;
+		padding-right: 35px;
+	}
+	.team1{
+		grid-column: 1/2;
+		grid-row: 1/2;
+	}
+	.team1 img{
+		float: left;
+		padding-right: 10px;
+	}
+	.team1 h3{
+		font-size: 40px;
+	}
+	.team2{
+		grid-column: 1/2;
+		grid-row: 2/3;
+	}
+	.team2 img{
+		float: right;
+		padding-left: 10px;
+	}
+	.team2 h3{
+		font-size: 40px;
+	}
+	/* Styling Contact us location and hours */
+	.contactcontent h2{
+		font-size: 50px;
+		padding-left: 35px;
+		padding-right: 35px;
+	}
+	.contactcontent{
+		max-width: 1200px;
+		margin: 0 auto;
+	}
+	.contactflex{ 
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: row;
+		justify-content: space-around;
+		justify-items:center;
+	}
+	.message {
+		padding: 0;
+		flex-basis: 45%;
+	}
+	.location {
+		flex-basis: 45%;
+	}
+	.hours{
+		order: 1;
+		width: 100%;
+		padding-bottom: 10px;
+	}
+	/* Styling footer */
+	.footer-content{
+		display: inherit;
+		margin-left: 0;
+		margin: 0 auto;
+		max-width: 1200px;
+	}
+	.footer-content li:nth-child(1){
+		padding-top: 10px;
+	}
+	.footer-content li:nth-child(2){
+		padding-bottom: 10px;
+		margin-bottom: 0;
+	}
 
 }
