--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -179,13 +179,15 @@ h1{
 	padding-bottom: 15px;
 	padding-top: 15px;
 	padding-left: 20px;
+	padding-right:20px;
 }
 /* Digital transformation part */
 .digital{
 	font-size: 12px;
 	color:#222;
 	margin-bottom: 10px;
-	margin-left:10px;
+	margin-left: 20px;
+	margin-right: 20px;
 	background-color:#ffe6ac;
 	background-size: cover;
 	padding-bottom: 40px;
@@ -218,7 +220,8 @@ h1{
 	font-size: 12px;
 	color:#222;
 	margin-bottom: 10px;
-	margin-left:10px;
+	margin-left:20px;
+	margin-right: 20px;
 	background-color:#ffe6ac;
 	background-size: cover;
 	padding-bottom: 40px;
@@ -252,7 +255,8 @@ h1{
 	font-size: 12px;
 	color:#222;
 	margin-bottom: 10px;
-	margin-left:10px;
+	margin-left:20px;
+	margin-right: 20px;
 	background-color:#ffe6ac;
 	background-size: cover;
 	padding-bottom: 40px;
@@ -286,7 +290,8 @@ h1{
 	font-size: 12px;
 	color:#222;
 	margin-bottom: 10px;
-	margin-left:10px;
+	margin-left:20px;
+	margin-right: 20px;
 	background-color:#ffe6ac;
 	background-size: cover;
 	padding-bottom: 40px;
@@ -320,7 +325,8 @@ h1{
 	font-size: 12px;
 	color:#222;
 	margin-bottom: 10px;
-	margin-left:10px;
+	margin-left:20px;
+	margin-right: 20px;
 	background-color:#ffe6ac;
 	background-size: cover;
 	padding-bottom: 40px;
@@ -366,13 +372,15 @@ h1{
 	font-weight: bolder;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	margin-left: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .visioncontent p{
 	color: whitesmoke;
 	font-size: 12px;
 	padding-bottom: 30px;
-	margin-left: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .visioncontent a {
 	background-color: #222;
@@ -381,7 +389,7 @@ h1{
 	color: white;
 	margin-left:10px;
 	margin-top: 20px;
-	padding-left:10px;
+	padding-left:20px;
 	padding: 20px;
 	border:1px solid #c78c06;
 }
@@ -421,7 +429,10 @@ h1{
 .team1{
 	font-size: 12px;
 	color:#222;
-	margin-left:10px;
+	margin-left:20px;
+	margin-right:20px;
+	margin-top: 15px;
+	margin-bottom: 60px;
 	background-color:#ffe6ac;
 	background-size: cover;
 }
@@ -452,7 +463,8 @@ h1{
 .team2{
 	font-size: 12px;
 	color:#222;
-	margin-left:10px;
+	margin-left:20px;
+	margin-right:20px;
 	margin-top: 15px;
 	margin-bottom: 60px;
 	background-color:#ffe6ac;
@@ -462,7 +474,7 @@ h1{
 .contactcontent h2{
 	font-size: 30px;
 	font-weight: bolder;
-	margin-left: 15px;
+	margin-left: 20px;
 }
 .message h3{
 	font-size: 20px;
@@ -498,9 +510,9 @@ table td{
 	border: 1px solid #222;
 }
 .hours table{
-	margin-left: 15px;
-	width: 100%;
-	margin-right: 15px;
+	margin-left: 20px;
+	width: 95%;
+	margin-right: 20px;
 }
 table  th{
 	align-items: center;
@@ -524,7 +536,7 @@ table td{
 .location iframe{
 	margin-left: 20px;
 	margin-right: 20px;
-	width: 90%%;
+	width: 95%;
 }
 .contactflex {
 	margin: 0 15px;
@@ -750,16 +762,19 @@ footer a{
 	/* Styling footer */
 	.footer-content{
 		display: inherit;
-		margin-left: 0;
 		margin: 0 auto;
 		max-width: 1200px;
 	}
 	.footer-content li:nth-child(1){
 		padding-top: 10px;
+		margin-left: 20px;
+		margin-right: 20px;
 	}
 	.footer-content li:nth-child(2){
 		padding-bottom: 10px;
 		margin-bottom: 0;
+		margin-left: 20px;
+		margin-right: 20px;
 	}
 
 }
