--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -204,7 +204,7 @@ h1{
 	font-size: 12px;
 	padding-left: 10px;
 	margin-top: 15px;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 }
 .digital a{
 	background-color: #222;
@@ -238,7 +238,7 @@ h1{
 	font-size: 12px;
 	padding-left: 10px;
 	margin-top: 15px;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 }
 .marketing a{
 	background-color: #222;
@@ -273,7 +273,7 @@ h1{
 	font-size: 12px;
 	padding-left: 10px;
 	margin-top: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 }
 .video a{
 	background-color: #222;
@@ -308,7 +308,7 @@ h1{
 	font-size: 12px;
 	padding-left: 10px;
 	margin-top: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 }
 .web a{
 	background-color: #222;
@@ -343,7 +343,7 @@ h1{
 	font-size: 12px;
 	padding-left: 10px;
 	margin-top: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 }
 .print a{
 	background-color: #222;
@@ -432,7 +432,7 @@ h1{
 	margin-left:20px;
 	margin-right:20px;
 	margin-top: 15px;
-	margin-bottom: 60px;
+	margin-bottom: 5px;
 	background-color:#ffe6ac;
 	background-size: cover;
 }
@@ -672,6 +672,16 @@ footer a{
 		grid-column: 5/7;
 		grid-row: 2/3;
 	}
+	.digital a,
+	.marketing a,
+	.video a,
+	.web a,
+	.print a{
+		display: block;
+		margin-right: 10px;
+		text-align: center;
+	}
+
 	/* Styling Our Vision */
 	.visionmore{
 		max-width: 1200px;
@@ -708,6 +718,7 @@ footer a{
 		padding-left: 20px;
 		padding-right: 35px;
 	}
+
 	.team1{
 		grid-column: 1/2;
 		grid-row: 1/2;
@@ -760,21 +771,11 @@ footer a{
 		padding-bottom: 10px;
 	}
 	/* Styling footer */
-	.footer-content{
+	footer{
 		display: inherit;
-		margin: 0 auto;
-		max-width: 1200px;
+		background-color: #222;
 	}
-	.footer-content li:nth-child(1){
-		padding-top: 10px;
-		margin-left: 20px;
-		margin-right: 20px;
+	footer p{
+		padding-left: 100px;
 	}
-	.footer-content li:nth-child(2){
-		padding-bottom: 10px;
-		margin-bottom: 0;
-		margin-left: 20px;
-		margin-right: 20px;
-	}
-
 }
