--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -680,7 +680,7 @@ footer a{
 		display: block;
 		margin-right: 10px;
 		text-align: center;
-		align-self: stretch;
+		align-self: flex-start;
 		align-items: stretch;
 	}
 
